--- a/acm.html
+++ b/acm.html
@@ -5,6 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Матеріали курсу АМО</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script>
+	    function downloadFile(url, filename) {
+        fetch(url)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+                return response.blob();
+            })
+            .then(blob => {
+                const link = document.createElement("a");
+                link.href = URL.createObjectURL(blob);
+                link.download = filename;
+                document.body.appendChild(link);
+                link.click();
+                document.body.removeChild(link);
+            })
+            .catch(console.error);
+        }	
+	</script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -39,70 +59,70 @@
 			<p>
             <div class="accordion" id="labsAccordion">
                 <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab1">Лабораторна №1</button></h2>
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab1">Лабораторна робота №1</button></h2>
                     <div id="lab1" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(скачати)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab1/blob/master/acmlab1.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab1/raw/refs/heads/acmlab1.cpp">Зразок коду одним файлом*(скачати)</a>
+                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(скачати)</a>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab1/blob/master/acmlab1.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab1/master/acmlab1.cpp', 'acmlab1.cpp'); return false;">Зразок коду одним файлом*(скачати)</a>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab2">Лабораторна №2</button></h2>
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab2">Лабораторна робота №2</button></h2>
                     <div id="lab2" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(скачати)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab2/blob/master/acmlab2.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab2/raw/refs/heads/acmlab2.cpp">Зразок коду одним файлом*(скачати)</a>
+                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(скачати)</a>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab2/blob/master/acmlab2.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab2/master/acmlab2.cpp', 'acmlab2.cpp'); return false;">Зразок коду одним файлом*(скачати)</a>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab3">Лабораторна №3</button></h2>
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab3">Лабораторна робота №3</button></h2>
                     <div id="lab3" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(скачати)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab3/blob/master/acmlab3.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab3/raw/refs/heads/acmlab3.cpp">Зразок коду одним файлом*(скачати)</a>
+                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(скачати)</a>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab3/blob/master/acmlab3.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab3/master/acmlab3.cpp', 'acmlab3.cpp'); return false;">Зразок коду одним файлом*(скачати)</a>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab4">Лабораторна №4</button></h2>
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab4">Лабораторна робота №4</button></h2>
                     <div id="lab4" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(скачати)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab4/blob/master/acmlab4.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab4/raw/refs/heads/acmlab4.cpp">Зразок коду одним файлом*(скачати)</a>
+                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(скачати)</a>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab4/blob/master/acmlab4.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab4/master/acmlab4.cpp', 'acmlab4.cpp'); return false;">Зразок коду одним файлом*(скачати)</a>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab5">Лабораторна №5</button></h2>
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab5">Лабораторна робота №5</button></h2>
                     <div id="lab5" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(скачати)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab5/blob/master/acmlab5.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab5/raw/refs/heads/acmlab5.cpp">Зразок коду одним файлом*(скачати)</a>
+                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(скачати)</a>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab5/blob/master/acmlab5.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab5/master/acmlab5.cpp', 'acmlab5.cpp'); return false;">Зразок коду одним файлом*(скачати)</a>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab6">Лабораторна №6</button></h2>
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab6">Лабораторна робота №6</button></h2>
                     <div id="lab6" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(скачати)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab6/">Зразок коду одним файлом*(відкрити на GitHub теку, що містить файл, код бібліотеки ReactiveX міститься у файлі коду)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab6/raw/refs/heads/acmlab6__with_rxcpp_src.cpp">Зразок коду одним файлом*(скачати, код бібліотеки ReactiveX міститься у файлі коду)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab6/tree/master/nonpacked">Зразок коду(відкрити на GitHub теку, що містить файл та бібліотеку ReactiveX)</a>
-						  | <a href="https://github.com/KozakNazar/srcacmlab6/raw/refs/heads/nonpacked/acmlab6.cpp">Зразок коду(скачати, потрібно самостійно встановити бібліотеки ReactiveX)</a>
+                                                      <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(скачати)</a>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab6/">Зразок коду одним файлом*(відкрити на GitHub теку, що містить файл, код бібліотеки ReactiveX міститься у файлі коду)</a>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab6/raw/refs/heads/master/acmlab6__with_rxcpp_src.cpp">Зразок коду одним файлом*(скачати, код бібліотеки ReactiveX міститься у файлі коду)</a>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab6/tree/master/nonpacked">Зразок коду(відкрити на GitHub теку, що містить файл та бібліотеку ReactiveX)</a>
+						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab6/master/nonpacked/acmlab6.cpp', 'acmlab6.cpp'); return false;">Зразок коду(скачати, потрібно самостійно встановити бібліотеки ReactiveX)</a>
                         </div>
                     </div>
                 </div>
